Add all images and slides

--- a/index.html
+++ b/index.html
@@ -12,10 +12,50 @@
     <script src="/Java/include.js"></script>
 
 </head>
-
 <body>
-
-
+    <div class="container-fluid">
+        <div class="raw">
+            <div class="col">
+                <div id="carouselExampleDark" class="carousel carousel-dark slide">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="Blog/images/real4.jpg" class="d-block w-100" alt="slide1">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h1>PERSPECTIVE</h1>
+                          <p>HOW WE SEE THINGS SPEAKS ALOT TO THE RESULTS WE GET.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item" data-bs-interval="2000">
+                        <img src="Blog/images/real1.jpg" class="d-block w-100" alt="">slide2
+                        <div class="carousel-caption d-none d-md-block">
+                          <h1>CELEBRATION</h1>
+                          <p>WE WIN SOME, LOSE SOME BUT WE CELEBRATE ALL THE WAY.</p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="Blog/images/real2.jpg" class="d-block w-100" alt="slide3">
+                        <div class="carousel-caption d-none d-md-block">
+                          <h1>SUPPORT</h1>
+                          <p>WE CHOOSE TO BE THE WALLS THAT SUPPORT THE WEARY.</p>
+                        </div>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
