adds all links, pages and images

--- a/Gallery.html
+++ b/Gallery.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gallery</title>
+    <link rel="stylesheet" href="/CSS/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="/CSS/styles.css">
+   <script src="/CSS/bootstrap/js/bootstrap.bundle.js"></script>
 </head>
+
 <body>
+    <div w3-include-html="/include/navbar.html"></div>
+    <script src="/Java/include.js"></script>
     
+    <img src="/Blog/images/real4.jpg" class="img-thumbnail" alt="serious">
+    <img src="/Blog/images/real3.jpg" class="img-thumbnail" alt="...">
+    <img src="/Blog/images/005.jpg" class="img-thumbnail" alt="...">
+    <img src="/Blog/images/002.jpg" class="img-thumbnail" alt="...">
+    <img src="/Blog/images/real1.jpg" class="img-thumbnail" alt="...">
+    <img src="/Blog/images/real2.jpg" class="img-thumbnail" alt="...">
+    <img src="/Blog/images/003.jpg" class="img-thumbnail" alt="...">
+    <img src="/Blog/images/004.jpg" class="img-thumbnail" alt="...">
 </body>
 </html>
