--- a/Subscribe.html
+++ b/Subscribe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chelsea</title>
+    <title>Subscribe</title>
     <link rel="stylesheet" href="/CSS/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="/CSS/styles.css">
     <script src="/CSS/bootstrap/js/bootstrap.bundle.js"></script>
@@ -11,5 +11,13 @@
 <body>
     <div w3-include-html="/include/navbar.html"></div>
     <script src="/Java/include.js"></script>
+    <div class="container">
+        <h1>Subscribe to Our Newsletter</h1>
+        <form action="#" method="post">
+            <input type="email" name="email" placeholder="Enter your email address" required>
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+    
 </body>
 </html>
